# tinyuf2

./: .clang-format  .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  changelog.md  partitions.csv  sdkconfig.defaults  supported_boards.md  workspace.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/actions/setup_toolchain/: action.yml
.github/workflows/: build.yml  build_arm.yml  build_cmake.yml  build_esp32.yml  build_ghostfat.yml  build_selftest.yml  build_util.yml  ci_set_matrix.py  codeql-buildscript.sh  codeql.yml  pre-commit.yml
apps/blinky/: CMakeLists.txt  blinky.c
apps/blinky/src/: blinky.c
apps/erase_firmware/: CMakeLists.txt  erase_firmware.c
apps/self_update/: CMakeLists.txt  self_update.c
apps/usb2uart/: usb2uart.c
cmake/: family_support.cmake
cmake/cpu/: cortex-m4.cmake  cortex-m7.cmake
cmake/toolchain/: arm_gcc.cmake  common.cmake  set_flags.cmake
components/boards/: CMakeLists.txt  boards.c  boards.h  screen.c
components/boards/espressif_kaluga_1/: board.h
components/boards/espressif_saola_1_wroom/: board.h
components/boards/espressif_saola_1_wrover/: board.h
components/boards/microdev_micro_s2/: board.h
components/boards/unexpectedmaker_feathers2/: board.h
components/bootloader/: project_include.cmake
components/lcd/: CMakeLists.txt  lcd.c
components/lcd/include/: lcd.h
components/led_strip/src/: led_strip_rmt_ws2812.c
components/led_strip_spi_apa102/include/: led_strip_spi_apa102.h
components/tinyusb/: CMakeLists.txt  tusb_config.h
erase_firmware/: erase_firmware.c
lib/SEGGER_RTT/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
lib/fatfs/: CMakeLists.txt
lib/fatfs/source/: 00history.txt  00readme.txt  ff.c  ffsystem.c
main/: CMakeLists.txt  compile_date.h  flash_hal.c  flash_hal.h  ghostfat.c  main.c  msc.c  msc_disk.c  screen.c  uf2.h  usb_descriptors.c
main/boards/: boards.c  boards.h
main/boards/espressif_kaluga_1/: board.h
main/boards/espressif_saola_1_wroom/: board.h
main/boards/espressif_saola_1_wrover/: board.h
ports/: CMakeLists.txt  build_all.py  family_support.cmake  make.mk  rules.mk  self_update.mk
ports/ch32v20x/: CMakeLists.txt  Makefile  board_flash.c  boards.c  boards.h  family.cmake  port.mk  tusb_config.h
ports/ch32v20x/linker/: ch32v20x_boot.ld
ports/esp32s2/: CMakeLists.txt  Makefile  README.md  partitions-4MB.csv  sdkconfig.defaults  tusb_config.h
ports/esp32s2/boards/: CMakeLists.txt  board_flash.c  boards.c  boards.h  flash_hal.c
ports/esp32s2/self_update/: CMakeLists.txt  sdkconfig
ports/espressif/: CMakeLists.txt  Makefile  README.md  family.cmake  partitions-16MB-ota4MB.csv  partitions-4MB-app3M5.csv  sdkconfig.defaults  tusb_config.h
ports/espressif/boards/: CMakeLists.txt  board_flash.c  boards.c  boards.h
ports/espressif/main/: CMakeLists.txt
ports/k32l2/: Makefile  board_flash.c  boards.c  boards.h  clock_config.c  tusb_config.h
ports/kinetis_k32l2/: Makefile  board_flash.c  boards.h  tusb_config.h
ports/lpc55/: Makefile  board_flash.c  boards.c  boards.h  port.mk  tusb_config.h
ports/max32650/: README.md  board_flash.c  boards.c  boards.h  port.mk  tusb_config.h
ports/max32650/linker/: max32650_app.ld  max32650_boot.ld  max32650_common.ld
ports/max32666/: Makefile  README.md  board_flash.c  boards.c  boards.h  port.mk
ports/max32690/: .gitignore  CMakeLists.txt  Makefile  README.md  app.cmake  board_flash.c  boards.c  boards.h  family.cmake  port.mk
ports/max78002/: README.md  board_flash.c  boards.c  boards.h  port.mk
ports/max78002/linker/: max78002_app.ld  max78002_boot.ld  max78002_common.ld
ports/maxim/: CMakeLists.txt  README.md  app.cmake  board_flash.c  family.cmake  port.mk  tusb_config.h
ports/mimxrt10xx/: CMakeLists.txt  Makefile  README.md  app.cmake  bl_flexspi.h  bl_trng.h  board_flash.c  boards.c  boards.h  family.cmake  flash_hal.c  flexspi_nor_config.h  flexspi_nor_flash.h  flexspi_nor_flash_ops.c  load2ram.md  port.mk  romapi_flash.c  romapi_flash.h  tusb_config.h
ports/mimxrt10xx/apps/: app.cmake  app.mk  memory.ld
ports/mimxrt10xx/erase_firmware/: Makefile  memory.ld
ports/mimxrt10xx/flash_nuke/: Makefile  flash_nuke.c
ports/mimxrt10xx/linker/: MIMXRT1011_nor.ld  MIMXRT1011_ram.ld  MIMXRT1011xxxxx_flexspi_nor.ld  MIMXRT1015_nor.ld  MIMXRT1015_ram.ld  MIMXRT1015xxxxx_flexspi_nor.ld  MIMXRT1021_nor.ld  MIMXRT1021_ram.ld  MIMXRT1021xxxxx_flexspi_nor.ld  app.ld  (+19 more)
ports/stm/: Makefile  boards.c  boards.h  flash_hal.c  tusb_config.h
ports/stm32f3/: CMakeLists.txt  Makefile  README.md  board_flash.c  boards.c  boards.h  family.cmake  port.mk  stm32f3xx_hal_conf.h  tusb_config.h
ports/stm32f4/: CMakeLists.txt  Makefile  README.md  app.cmake  board_flash.c  boards.c  boards.h  family.cmake  flash_hal.c  port.mk  stm32f4xx_hal_conf.h
ports/stm32g4/: CMakeLists.txt  board_flash.c  boards.c  boards.h  family.cmake  port.mk
ports/stm32h5/: CMakeLists.txt  README.md  app.cmake  board_flash.c  boards.c  boards.h  family.cmake  port.mk  stm32h5xx_hal_conf.h  tusb_config.h
ports/stm32h7/: Makefile  README.md  board_flash.c  board_hmi.c  board_irq.c  boards.c  boards.h  port.mk  qspi_status.h  stm32h7xx_hal_conf.h  tusb_config.h
ports/stm32l4/: Makefile  README.md  board_flash.c  boards.c  boards.h  port.mk  stm32l4xx_hal_conf.h  tusb_config.h
ports/template_port/: Makefile  board_flash.c  boards.c  boards.h  tusb_config.h
ports/test_ghostfat/: CMakeLists.txt  Makefile  boards.c  boards.h  common.h  main.c  tusb_config.h
self_update/: CMakeLists.txt  self_update.c
selftests/ghostfat/: boards.c  boards.h  main.c
src/: CMakeLists.txt  board_api.h  boards.h  compile_date.h  favicon.h  favicon_adafruit_256.h  flash_hal.h  ghostfat.c  images.c  main.c  msc.c  screen.c  tinyuf2.cmake  uf2.h  usb_descriptors.c
src/favicon/: favicon_adafruit_256.h  favicon_matrix_256.h  favicon_sensebox_256.h
tools/: build.py  build_all.py  gen_boards.py  get_deps.py  top.mk  touch1200.py
tools/codespell/: ignore-words.txt
(+603 files in other folders)
